# test-serde

./: Cargo.toml
src/: main.rs
