[package]
name = "test-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpl-token-metadata = {version = "1.3.2", features = ["serde-feature"] }
# mpl-token-metadata = {version = "1.3.2", features = [] }
serde = "1.0.139"
serde_json = "1.0.82"
solana-sdk = "1.11.3"
